--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+.background-transparent{
+    background: transparent;
+}
+
+.mb-5{
+    margin-bottom: 5px;
+}
+
+.red{
+    color: color($colors, red2);
+}
